# GDL

./: .clang-format  .codecov.yml  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Doxyfile  README.md  doxyfile
applications/: CMakeLists.txt
applications/examples/: CMakeLists.txt
applications/examples/opengl/: CMakeLists.txt  TriangleOpenGL.cpp  fragmentShaderIntegrationGL.cpp
applications/examples/opengl/basics/: CMakeLists.txt  indexedDrawing.cpp
applications/examples/opengl/cookbook/: CMakeLists.txt  cookbook_Chapter1_Page25_GL.cpp  cookbook_Chapter1_Page37_GL.cpp  cookbook_Chapter1_Page43.cpp
applications/examples/opengl/lighting/: CMakeLists.txt  diffusePerVertexShading.cpp  phongModel.cpp
applications/examples/opengl/misc/: CMakeLists.txt  movingCamera.cpp  stencilObjectOutlining.cpp  visualizeDepthBuffer.cpp
applications/examples/opengl/textures/: CMakeLists.txt  multipleTextures.cpp  textureFiltering.cpp  textureMipMaps.cpp  textureWrapping.cpp  texturedRectangle.cpp
applications/examples/opengl/utility/: defaultRenderSetup.h  defaultScene01.h  exampleCamera.h  exampleCamera.inl  exampleLightSourceManager.h  exampleLightSourceManager.inl  exampleLightSourceVisualizer.h  exampleLightSourceVisualizer.inl  examplePhongLightManager.h  examplePhongLightManager.inl  exampleSceneGenerator.h  exampleSceneGenerator.inl  lightSourceVisualizer.h  meshGenerator.h  meshGenerator.inl
applications/tools/: CMakeLists.txt
applications/tools/models/modelImporter/: CMakeLists.txt  modelImporter.cpp
applications/tools/models/modelImporter/src/: mainWindow.cpp  mainWindow.h  mainWindow.ui  mesh.cpp  mesh.h  model.cpp  model.h  openGLWidget.cpp  openGLWidget.h  setupOpenGLContext.cpp  setupOpenGLContext.h
applications/tools/textures/converter/: CMakeLists.txt  textureConverter.cpp
applications/tutorials/: CMakeLists.txt
applications/tutorials/resources/: CMakeLists.txt  tutorial_1.1_memoryManagement.cpp  tutorial_1.2_multiThreading.cpp
benchmark/: CMakeLists.txt
benchmark/base/: CMakeLists.txt
benchmark/base/sse/: Benchmark_directAccess.cpp  Benchmark_registerSum.cpp  Benchmark_transpose.cpp  CMakeLists.txt
benchmark/math/: BM_Mat4.cpp  BM_MatX.cpp  Benchmark_Mat.cpp  Benchmark_Mat4.cpp  Benchmark_MatX.cpp  Benchmark_mat.cpp  Benchmark_mat4.cpp  Benchmark_solver3.cpp  CMakeLists.txt
benchmark/math/solver/: Benchmark_gauss.cpp  Benchmark_lu.cpp  Benchmark_qr.cpp  Benchmark_solver3.cpp  Benchmark_solver4.cpp  CMakeLists.txt  solverBenchmark.h  solverBenchmarkData.h  unifiedDenseSolverBenchmark.h
benchmark/physics/: CMakeLists.txt
benchmark/physics/collision/functions/: Benchmark_orientation.cpp  Benchmark_pointAreaTests.cpp  Benchmark_pointVolumeTests.cpp  CMakeLists.txt
benchmark/resources/: Benchmark_allocators.cpp  Benchmark_threadPool.cpp  CMakeLists.txt
cmake/: AddUnitTest.cmake
documentation/: Doxyfile  doxyfile
gdl/: CMakeLists.txt
python/: .gitignore  compareDenseSolvers.py  environment.yml
src/: CMakeLists.txt  GDLTypedefs.h
src/base/: Exception.h  SSESupportFunctions.h
src/math/: mat4SIMD.h  mat4SIMD.inl  mat4Single.h  mat4Single.inl  mat4f.h  mat4f.inl  matXSIMD.h  matXSIMD.inl  matXSingle.h  matXSingle.inl
src/rendering/: CMakeLists.txt  programGL.cpp  programGL.h  renderWindow.cpp  shaderGLSL.cpp  shaderGLSL.h
src/rendering/openGL/: CMakeLists.txt  Uniform.h  programGL.cpp  programGL.h  renderWindowGL.cpp  renderWindowGL.h  shaderGL.cpp
src/resourceManagement/: Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.cpp  ThreadSafeQueue.h  ThreadTask.h  ThreadTaskBase.h
src/resourceManagement/memory/: PoolAllocator.h
test/unit/base/: CMakeLists.txt  Test_approx.cpp  Test_freeFunctions.cpp  Test_functionTraits.cpp  Test_insideTolerance.cpp  Test_outputFile.cpp  Test_sse.cpp  Test_timer.cpp  Test_tolerance.cpp  Test_transpose.cpp  Test_uniquePtr.cpp
test/unit/base/simd/: CMakeLists.txt  Test_abs.cpp  Test_compareAll.cpp  Test_copySign.cpp  Test_crossProduct.cpp  Test_determinant.cpp  Test_directAccess.cpp  Test_dotProduct.cpp  Test_negate.cpp  Test_sum.cpp  Test_swizzle.cpp  Test_transpose.cpp  Test_transpose_m128.cpp  Test_transpose_m128d.cpp  Test_transpose_m256.cpp  Test_transpose_m256d.cpp  Test_utility.cpp  transposeTest.h  transposeTest.inl  transpose_test_template_general.h  transpose_test_template_general.inl  transpose_test_template_register.h  transpose_test_template_register.inl
test/unit/base/sse/: CMakeLists.txt  Test_abs.cpp  Test_compareAll.cpp  Test_crossProduct.cpp  Test_determinant.cpp  Test_directAccess.cpp  Test_dotProduct.cpp  Test_maskMacros.cpp  Test_negate.cpp  Test_swizzle.cpp  Test_transpose.cpp  Test_utility.cpp
test/unit/math/: CMakeLists.txt  Test_Mat.cpp  Test_Mat2.cpp  Test_Mat3.cpp  Test_Mat4.cpp  Test_Vec2.cpp  Test_Vec3.cpp  Test_Vec4.cpp  Test_mat.cpp  Test_mat2.cpp  Test_mat3.cpp  Test_mat4.cpp  Test_quat.cpp  Test_solver3.cpp  Test_solver4.cpp  Test_sparseMatCLL.cpp  Test_vec.cpp  Test_vec2.cpp  Test_vec3.cpp  Test_vec4.cpp
test/unit/math/solver/: CMakeLists.txt  Test_gauss.cpp  Test_lu.cpp  Test_qr.cpp  Test_solver3.cpp  Test_solver4.cpp  solverTests.h  solverTests.inl
test/unit/rendering/openGL/: CMakeLists.txt
test/unit/rendering/openGL/core/: CMakeLists.txt  ContextManagerRenderWindowTests.h  Test_GLFW.cpp  Test_GLUT.cpp  Test_bufferObject.cpp  Test_bufferObjectGL.cpp  Test_bufferObjects.cpp  Test_contextGLUT.cpp  Test_program.cpp  Test_programGL.cpp  Test_renderWindowGL.cpp  Test_renderWindowGLUT.cpp  Test_shader.cpp  Test_shaderGL.cpp  Test_texture.cpp  Test_uniformBufferObjectGL.cpp  Test_vertexArrayObject.cpp  Test_vertexArrayObjectGL.cpp
test/unit/rendering/openGL/management/: CMakeLists.txt  Test_managedUniformBufferObjectGL.cpp  Test_programDataManagerGL.cpp
tests/: CMakeLists.txt
tests/resourceManagement/: CMakeLists.txt  TestThreadPool.cpp
tests/unit/resourceManagement/: CMakeLists.txt  TestThreadPool.cpp  Test_Allocator.cpp  Test_ThreadPool.cpp
tutorials/: CMakeLists.txt
tutorials/vulkan/01/: vulkanTutorial01.cpp
(+554 files in other folders)
