add_executable(Cookbook_Chapter1_Page25_GL
    cookbook_Chapter1_Page25_GL.cpp)

target_link_libraries(Cookbook_Chapter1_Page25_GL
    GDL::OpenGLCore
    )

TargetDefaultBuildSetup(Cookbook_Chapter1_Page25_GL)


add_executable(Cookbook_Chapter1_Page37_GL
    cookbook_Chapter1_Page37_GL.cpp)

target_link_libraries(Cookbook_Chapter1_Page37_GL
    GDL::OpenGLCore
    )

TargetDefaultBuildSetup(Cookbook_Chapter1_Page37_GL)


add_executable(Cookbook_Chapter1_Page43
    cookbook_Chapter1_Page43.cpp)

target_link_libraries(Cookbook_Chapter1_Page43
    GDL::OpenGLCore
    )

TargetDefaultBuildSetup(Cookbook_Chapter1_Page43)
